Incorporacion de un formulario de registro

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,6 +35,11 @@
         <div class="m-t-small flex-center" th:if="${param.error}">
             <p style="color: yellow;">Nombre o contraseña incorrecta.</p>
         </div>
+
+        <!-- Enlace para ir al registro -->
+        <div class="m-t-small flex-center">
+            <a href="/register">¿No tienes cuenta? Regístrate aquí</a>
+        </div>
         
     </form>
     </div>
