--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
 *{
@@ -8,7 +8,37 @@
 }
 
 body{
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
+}
+
+header{
+    background-color: rgba(255, 255, 255, 0.376);
+    box-shadow: 1.5px 1.5px 4px #b3b3b3;
+    height: 40px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    /* justify-content: space-between; */
+    justify-content: center;
+    align-items: center;
+    padding: 0 1em;
+}
+
+header nav a{
+    color: #67666e;
+    font-weight: normal;
+    margin-left: 1em;
+    transition: 200ms ease-in-out all;
+    z-index: 2;
+    text-decoration: none;
+}
+header nav a.activo,
+header nav a:hover{
+    color: #a97c50;
+    font-weight: bold;
+    margin-left: 1em;
 }
 
 .hero {
@@ -164,11 +194,11 @@ input{
     width: 100%;
     background-color:  #b2cee322;
     transition: all ease-in-out 500ms;
+    font-family: "Poppins", sans-serif;
 }
 
 input:hover{
     background-color: #ffebd8;
-    /* color: rgba(255, 255, 255, 0.534); */
     color: rgba(0, 0, 0, 0.534);
     
 }
@@ -177,6 +207,17 @@ input:focus{
     background-color: #ffebd8;
     color: black;
     border: 0.5px solid black;
+}
+
+select{
+    font-family: "Poppins", sans-serif;
+    padding: 5px;
+    margin-left: 4px;
+    max-width: 100%;
+}
+
+span{
+    color: white;
 }
 
 .caja-login button {
@@ -202,6 +243,7 @@ h2{
     z-index: 2;
     margin-top: 30px;
     color: white;
+    text-decoration: underline;
 }
 
 /* margen nuevo para el label de nombre */
@@ -236,4 +278,235 @@ h2{
     color: white;
 }
 
+
+/* estilos generales */
+/* estilos generales */
+/* estilos generales */
+/* estilos generales */
+.caja-barra-busqueda{
+    background-color: #1e69a26a;
+    padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.30);
+    box-shadow: 2px 4px 10px 4px #ffffff54;   
+    border-radius: 4px;
+    max-width: 80%;
+    
+}
+/* caja de busqueda para las card de editar o agregar elementos */
+.caja-barra-busqueda-card{
+    background-color: #1e69a26a;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 0;
+    border: 1px solid rgba(0, 0, 0, 0.30);
+    box-shadow: 2px 4px 10px 4px #ffffff54;   
+    border-radius: 4px;
+    max-width: 100%;
+}
+
+.caja-barra-busqueda-card input{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+    max-width: 100%;
+}
+
+.caja-tablas{
+    background-color: #1e69a26a;
+    padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.30);
+    box-shadow: 2px 4px 10px 4px #ffffff54;   
+    border-radius: 4px;
+    max-width: 80%;
+}
+
+/* tablas a usar en cada apartado web */
+table{
+    width: 100%;
+    margin: 8px 2px;   
+    padding: 5px;
+    border-spacing: 3px;
+}
+/* cabecera de la tabla */
+th{
+    background-color: #2b87cdb7;
+    color: white;
+    font-size: 20px;
+    padding: 5px;
+    text-align: left;
+    /* border: 1px solid black; */
+    border: 1px solid white;
+}
+/* datos de las filas */
+td{
+    color: white;
+    border:1px solid rgba(255, 255, 255, 0.45);
+    padding: 12px;
+
+}
+/* filas de la tabla */
+tr:nth-child(even) td{
+    border: solid 1px white;}
+tr:nth-child(odd) td{
+    background-color: rgba(151, 203, 243, 0.40);
+    /* color: black; */
+    color: white;
+    border:1px solid rgba(255, 255, 255, 0.6);
+}
+
+/* Estilos asignados para cada boton disponible */
+/* boton de agregar */
+.btn-agregar{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    box-shadow: 1px 2px 10px 2px #ffffff54;
+}
+.btn-agregar:hover{
+    background-color: #0d6efd;
+    color: white;
+}
+
+/* boton para ver elementos eliminados */
+.btn-ver-eliminadas{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    box-shadow: 1px 2px 10px 2px #ffffff54;
+}
+.btn-ver-eliminadas:hover{
+    background-color: #ffc107;
+    color: black;
+}
+
+/* boton para editar elementos */
+.btn-editar{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    /* box-shadow: 1px 1px 10px 1px #ffffff54; */
+}
+.btn-editar:hover{
+    background-color: #198754;
+    color: white;
+}
+
+/* boton de editar dentro de una card */
+.btn-editar-card{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    max-width: 30%;
+    /* box-shadow: 1px 1px 10px 1px #ffffff54; */
+}
+.btn-editar-card:hover{
+    background-color: #198754;
+    color: white;
+}
+
+
+/*boton para eliminar elementos*/
+.btn-eliminar{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    /* box-shadow: 1px 1px 10px 1px #ffffff54; */
+}
+.btn-eliminar:hover{
+    background-color: #dc3545;
+}
+
+/* barra de busqueda */
+.buscador{
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+    transition: ease-in 200ms;
+    width: 80%;
+}
+.buscador:hover{
+    background-color: rgba(255, 255, 255, 0.775);
+}
+.buscador:focus{
+    background-color: white;
+    color: black;
+    border: 0.5px solid black;
+}
+
+/* buscador para los apartados de editar o agregar elementos */
+.buscador-card{
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+    transition: ease-in 200ms;
+}
+.buscador-card:hover{
+    background-color: rgba(255, 255, 255, 0.775);
+}
+.buscador-card:focus{
+    background-color: white;
+    color: black;
+    border: 0.5px solid black;
+}
+
+/* boton de busqueda */
+.btn-buscar{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    width: 20%;
+}
+.btn-buscar:hover{
+    background-color: #198754;
+    color: white;
+    border: 1px solid black;
+}
+
+.btn-facturar{
+    background-color: #2b87cdb7;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 12px;
+    color: white;
+    border: 1.2px solid rgba(0, 0, 0, 0.30);
+    border-radius: 3px;
+    transition: ease-in 200ms;
+    width: 20%;
+}
+.btn-facturar:hover{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+}
 
