--- a/src/main/resources/templates/agregarModificarDetallesOrden.html
+++ b/src/main/resources/templates/agregarModificarDetallesOrden.html
@@ -3,137 +3,145 @@
 <head>
     <title>DetalleOrden</title>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
-<div class="container mt-4">
-    <div class="col-sm-6">
-        <div th:if="${modo eq 'nuevo'}">
-            <form th:action="@{/ordenes/guardarDetalleOrden/} + ${orden.idOrden}" th:object="${detalleOrden}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>DetalleOrden</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group">
-                            <input type="hidden" name="idDetalleOrden" th:field="*{idDetalleOrden}"/>
+
+    <div class="hero">
+
+
+        <div class="fila flex-center">
+            <div class="caja-barra-busqueda-card">
+                <div th:if="${modo eq 'nuevo'}">
+                    <form th:action="@{/ordenes/guardarDetalleOrden/} + ${orden.idOrden}" th:object="${detalleOrden}" method="POST">
+                        <div class="col-100">
+                            <div>
+                                <h2>Agregar Detalle de Orden</h2>
+                            </div>
+
+                            <div class="flex-column-center">
+                                
+                                <div>
+                                    <input type="hidden" name="idDetalleOrden" th:field="*{idDetalleOrden}"/>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Servicio</label>                            
+                                    <div>
+                                        <select class="m-t-small" id="servicio" name="servicio" required>
+                                            <option value="" disabled selected>Selecciona un Servicio</option>
+                                            <option th:each="servicio : ${servicios}" th:value="${servicio.idServicio}" th:text="${servicio.nombre}" th:selected="${detalleOrden.servicio != null and servicio.idServicio == detalleOrden.servicio.idServicio}" th:data-precio="${servicio.precio}"></option>
+                                        </select>
+                                    </div>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Precio unitario del servicio</label>
+                                    <input class="buscador-card m-t-small" type="number" name="precioServicio" id="precioServicio" th:value="${precioServicioElegido}" disabled />
+                                </div>
+                                
+                                <div class="m-t">
+                                    <label>Precio final del servicio</label>
+                                    <input class="buscador-card m-t-small" type="number" name="precioFinalServicio" id="precioFinalServicio" th:field="*{precioFinalServicio}"/>
+                                    
+                                </div>
+        
+                                <div class="form-group">
+                                    <label>Cantidad</label>
+                                    <input class="buscador-card" type="text" name="cantidadDetalleOrden" th:field="*{cantidad}" />
+                                    <span th:if="${#fields.hasErrors('cantidad')}" th:errors="*{cantidad}"></span>
+                                </div>
+                                       
+                                <div class="m-t">
+                                    <label>Subtotal</label>
+                                    <input class="buscador-card m-t-small" type="number" id="subtotal" disabled />
+                                </div>
+        
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoDetalleOrden" th:field="*{estado}"/>
+                                </div>
+        
+                            </div>
+        
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card m-r" value="Guardar" />
+                                <a  class="btn-eliminar m-l" th:href="@{/ordenes/detallesOrden/} + ${orden.idOrden}">Regresar</a>
+                            </div>
                         </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Servicio</label>
-
-                            <select class="form-control" id="servicio" name="servicio" required>
-                                <option value="" disabled selected>Selecciona un Servicio</option>
-                                <option th:each="servicio : ${servicios}" th:value="${servicio.idServicio}" th:text="${servicio.nombre}" th:selected="${detalleOrden.servicio != null and servicio.idServicio == detalleOrden.servicio.idServicio}" th:data-precio="${servicio.precio}"></option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Precio unitario del servicio</label>
-                            <input class="form-control" type="number" name="precioServicio" id="precioServicio" th:value="${precioServicioElegido}" disabled />
-                            <!--<span th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></span>-->
-                        </div>
-                        
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Precio final del servicio</label>
-                            <input class="form-control" type="number" name="precioFinalServicio" id="precioFinalServicio" th:field="*{precioFinalServicio}"/>
-                            <!--<span th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></span>-->
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Cantidad</label>
-                            <input class="form-control" type="text" name="cantidadDetalleOrden" th:field="*{cantidad}" />
-                            <span th:if="${#fields.hasErrors('cantidad')}" th:errors="*{cantidad}"></span>
-                        </div>
-
-
-                        
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Subtotal</label>
-                            <input class="form-control" type="number" id="subtotal" disabled />
-                        </div>
-
-                        <div class="form-group">
-                            <input type="hidden" name="estadoDetalleOrden" th:field="*{estado}"/>
-                        </div>
-
-                    </div>
-
-                    <div class="card-footer">
-                        <!--                    <input type="submit" value="Guardar" th:if="${modo == 'nuevo'}">
-                                            <input type="submit" value="Actualizar" th:if="${modo == 'editar'}"> -->
-                        <button type="submit" class="btn btn-success ">Guardar</button>
-                        <a  class="btn btn-danger" th:href="@{/ordenes/detallesOrden/} + ${orden.idOrden}">Regresar</a>
-                    </div>
+                    </form>
                 </div>
+                                
+        
+        
+        
+                <!--Actualizar-->
+                <div th:if="${modo eq 'editar'}">
+                    <form th:action="@{/ordenes/actualizarDetalleOrden/} + ${orden.idOrden}" th:object="${detalleOrden}" method="POST">
+                        <div class="col-100">
+                            
+                            <div class="card-header">
+                                <h2>Editar Detalle de Orden</h2>
+                            </div>
+                            
+                            <div class="flex-column-center">
+                                <div>
+                                    <input type="hidden" name="idDetalleOrden" th:field="*{idDetalleOrden}"/>
+                                </div>
+                                
+                                <div class="m-t">
+                                    <label>Servicio</label>
+                                    <div>
+                                        <select class="m-t-small" id="servicio" name="servicio" required>
+                                            <option value="" disabled selected>Selecciona un Servicio</option>
+                                            <option th:each="servicio : ${servicios}" th:value="${servicio.idServicio}" th:text="${servicio.nombre}" th:selected="${detalleOrden.servicio != null and servicio.idServicio == detalleOrden.servicio.idServicio}" th:data-precio="${servicio.precio}"></option>
+                                        </select>
+                                    </div>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Precio unitario del servicio</label>
+                                    <input class="buscador-card m-t-small" type="number" name="precioServicio" id="precioServicio" th:value="${precioServicioElegido}" disabled />
+                                </div>
+                                
+                                <div class="m-t">
+                                    <label>Precio final del servicio</label>
+                                    <input class="buscador-card" type="number" name="precioFinalServicio" id="precioFinalServicio" th:field="*{precioFinalServicio}"/>
+                                    <span th:if="${#fields.hasErrors('precioFinalServicio')}" th:errors="*{precioFinalServicio}"></span>
+                                </div>
+        
+        
+                                <div class="m-t">
+                                    <label>Cantidad</label>
+                                    <input class="buscador-card m-t-small" type="text" name="cantidadDetalleOrden" th:field="*{cantidad}" />
+                                    <span th:if="${#fields.hasErrors('cantidad')}" th:errors="*{cantidad}"></span>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Subtotal</label>
+                                    <input class="buscador-card m-t-small" type="number" id="subtotal" disabled />
+                                </div>
+        
+        
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoDetalleOrden" th:field="*{estado}"/>
+                                </div>
+        
+                            </div>
 
-            </form>
-        </div>
-
-        <!--Actualizar-->
-        <div th:if="${modo eq 'editar'}">
-            <form th:action="@{/ordenes/actualizarDetalleOrden/} + ${orden.idOrden}" th:object="${detalleOrden}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>DetalleOrden</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group">
-                            <input type="hidden" name="idDetalleOrden" th:field="*{idDetalleOrden}"/>
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card" value="Actualizar" />
+                                <a  class="btn-eliminar m-l" th:href="@{/ordenes/detallesOrden/} + ${orden.idOrden}">Regresar</a>
+                            </div>
                         </div>
-                        
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Servicio</label>
-
-                            <select class="form-control" id="servicio" name="servicio" required>
-                                <option value="" disabled selected>Selecciona un Servicio</option>
-                                <option th:each="servicio : ${servicios}" th:value="${servicio.idServicio}" th:text="${servicio.nombre}" th:selected="${detalleOrden.servicio != null and servicio.idServicio == detalleOrden.servicio.idServicio}" th:data-precio="${servicio.precio}"></option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Precio unitario del servicio</label>
-                            <input class="form-control" type="number" name="precioServicio" id="precioServicio" th:value="${precioServicioElegido}" disabled />
-                            <!--<span th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></span>-->
-                        </div>
-                        
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Precio final del servicio</label>
-                            <input class="form-control" type="number" name="precioFinalServicio" id="precioFinalServicio" th:field="*{precioFinalServicio}"/>
-                            <span th:if="${#fields.hasErrors('precioFinalServicio')}" th:errors="*{precioFinalServicio}"></span>
-                        </div>
-
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Cantidad</label>
-                            <input class="form-control" type="text" name="cantidadDetalleOrden" th:field="*{cantidad}" />
-                            <span th:if="${#fields.hasErrors('cantidad')}" th:errors="*{cantidad}"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Subtotal</label>
-                            <input class="form-control" type="number" id="subtotal" disabled />
-                        </div>
-
-
-                        <div class="form-group">
-                            <input type="hidden" name="estadoDetalleOrden" th:field="*{estado}"/>
-                        </div>
-
-                    </div>
-                    <div class="card-footer">
-                        <!--                    <input type="submit" value="Guardar" th:if="${modo == 'nuevo'}">
-                                            <input type="submit" value="Actualizar" th:if="${modo == 'editar'}"> -->
-                        <button type="submit" class="btn btn-success">Actualizar</button>
-                        <a  class="btn btn-danger" th:href="@{/ordenes/detallesOrden/} + ${orden.idOrden}">Regresar</a>
-                    </div>
+        
+                    </form>
+        
                 </div>
-
-            </form>
-
+            </div>
         </div>
     </div>
-</div>
+
+
 
 <script th:inline="javascript">
     /*<![CDATA[*/
