--- a/src/main/resources/templates/agregarModificarMarca.html
+++ b/src/main/resources/templates/agregarModificarMarca.html
@@ -4,85 +4,95 @@
 <head>
     <title>Marca</title>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 
 <body>
-    <div class="container mt-4">
-        <div class="col-sm-6">
-            <div th:if="${modo eq 'nuevo'}">
-                <form th:action="@{/guardarMarca}" th:object=${marca} method="POST">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>Marca</h3>
-                        </div>
 
-                        <div class="card-body">
-                            <div class="form-group">
-                                <input type="hidden" name="idMarca" th:field="*{idMarca}" />
+    <div class="hero">
+
+        <div class="fila flex-center">
+            <div class="caja-barra-busqueda-card m-t">
+                <div th:if="${modo eq 'nuevo'}">
+                    <form th:action="@{/guardarMarca}" th:object=${marca} method="POST">
+                        <div class="col-100">
+                            <div>
+                                <h2>Agregar Marca</h2>
                             </div>
-
-                            <div class="form-group">
-                                <label style="font-weight: bold;">Nombre</label>
-                                <input class="form-control" type="text" name="nombreMarca" th:field="*{nombre}" />
-                                <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></span>
-
-                                <label style="font-weight: bold;">Impuesto</label>
-                                <input class="form-control" type="number" step="0.01" name="valorImpuesto" th:field="*{impuesto}" />
-                                <span th:if="${#fields.hasErrors('impuesto')}" th:errors="*{impuesto}"></span>
+    
+                            <div class="flex-column-center">
+                                <div>
+                                    <input class="buscador-card" type="hidden" name="idMarca" th:field="*{idMarca}" />
+                                </div>
+    
+                                <div>
+                                    <label>Nombre</label>
+                                    <input class="buscador-card" type="text" name="nombreMarca" th:field="*{nombre}" />
+                                    <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></span>
+                                </div>
+    
+                                <div class="m-t">
+                                    <label>Impuesto</label>
+                                    <input class="buscador-card" type="number" step="0.01" name="valorImpuesto" th:field="*{impuesto}" />
+                                    <span th:if="${#fields.hasErrors('impuesto')}" th:errors="*{impuesto}"></span>
+                                </div>
+    
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoMarca" th:field="*{estado}" />
+                                </div>
                             </div>
-
-                            <div class="form-group">
-                                <input type="hidden" name="estadoMarca" th:field="*{estado}" />
-                            </div>
-                        </div>
-
-                        <div class="card-footer">
-                            <input type="submit" class="btn btn-success" value="Guardar" />
-                            <a class="btn btn-danger" th:href="@{/marcas}">Regresar</a>
-                        </div>
-                    </div>
-                </form>
-            </div> <!-- Nuevo form para editar-->
-            <div th:if="${modo eq 'editar'}">
-                <form th:action="@{/actualizarMarca}" th:object=${marca} method="POST">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>Marca</h3>
-                        </div>
-
-                        <div class="card-body">
-                            <div class="form-group">
-                                <input type="hidden" name="idMarca" th:field="*{idMarca}" />
-                            </div>
-
-                            <div class="form-group">
-                                <label style="font-weight: bold;">Nombre</label>
-                                <input class="form-control" type="text" name="nombreMarca" th:field="*{nombre}" />
-                                <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label style="font-weight: bold;">Impuesto</label>
-                                <input class="form-control" type="number" step="0.01" name="valorImpuesto" th:field="*{impuesto}" />
-                                <span th:if="${#fields.hasErrors('impuesto')}" th:errors="*{impuesto}"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <input type="hidden" name="estadoMarca" th:field="*{estado}" />
+    
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card m-r" value="Guardar" />
+                                <a class="btn-eliminar" th:href="@{/marcas}">Regresar</a>
                             </div>
                         </div>
+                    </form>
 
-                        <div class="card-footer">
-                            <input type="submit" class="btn btn-success" value="Actualizar" />
-                            <a class="btn btn-danger" th:href="@{/marcas}">Regresar</a>
+
+                </div> <!-- Nuevo form para editar-->
+                <div th:if="${modo eq 'editar'}">
+                    <form th:action="@{/actualizarMarca}" th:object=${marca} method="POST">
+                        <div class="col-100">
+                            <div>
+                                <h2>Editar Marca</h2>
+                            </div>
+    
+                            <div class="flex-column-center">
+                                <div>
+                                    <input class="buscador-card" type="hidden" name="idMarca" th:field="*{idMarca}" />
+                                </div>
+    
+                                <div>
+                                    <label>Nombre</label>
+                                    <input class="buscador-card" type="text" name="nombreMarca" th:field="*{nombre}" />
+                                    <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></span>
+                                </div>
+    
+                                <div class="m-t">
+                                    <label>Impuesto</label>
+                                    <input class="buscador-card" type="number" step="0.01" name="valorImpuesto" th:field="*{impuesto}" />
+                                    <span th:if="${#fields.hasErrors('impuesto')}" th:errors="*{impuesto}"></span>
+                                </div>
+    
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoMarca" th:field="*{estado}" />
+                                </div>
+                            </div>
+    
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card" value="Actualizar" />
+                                <a class="btn-eliminar m-l" th:href="@{/marcas}">Regresar</a>
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div> 
+                    </form>
+                </div> 
+            </div>
         </div>
+
     </div>
+
+    
 </body>
 
 </html>
