--- a/src/main/resources/templates/agregarModificarVehiculo.html
+++ b/src/main/resources/templates/agregarModificarVehiculo.html
@@ -3,128 +3,131 @@
 <head>
     <title>Vehiculo</title>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
-<div class="container mt-4">
-    <div class="col-sm-6">
-        <div th:if="${modo eq 'nuevo'}">
-            <form th:action="@{/guardarVehiculo}" th:object="${vehiculo}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Vehiculo</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group">
-                            <input type="hidden" name="idVehiculo" th:field="*{idVehiculo}"/>
+
+    <div class="hero">
+
+    
+        <div class="fila flex-center">
+            <div class="caja-barra-busqueda-card m-t">
+                <div th:if="${modo eq 'nuevo'}">
+                    <form th:action="@{/guardarVehiculo}" th:object="${vehiculo}" method="POST">
+                        <div class="col-100">
+                            <div>
+                                <h2>Agregar Vehiculo</h>
+                            </div>
+        
+                            <div class="flex-column-center">
+                                <div>
+                                    <input class="buscador-card" type="hidden" name="idVehiculo" th:field="*{idVehiculo}"/>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Patente</label>
+                                    <input class="buscador-card" type="text" name="patenteVehiculo" th:field="*{patente}" />
+                                    <span th:if="${#fields.hasErrors('patente')}" th:errors="*{patente}"></span>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Año</label>
+                                    <input class="buscador-card" type="text" name="yearVehiculo" th:field="*{year}" />
+                                    <span th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></span>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Modelo</label>
+                                    <select id="modelo" name="modelo" required>
+                                        <option value="" disabled selected>Selecciona un Modelo</option>
+                                        <option th:each="modelo : ${modelos}" th:value="${modelo.idModelo}" th:text="${modelo.nombre}" th:selected="${vehiculo.modelo != null and modelo.idModelo == vehiculo.modelo.idModelo}"></option>
+                                    </select>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Cliente</label>
+                                    <select id="cliente" name="cliente" required>
+                                        <option value="" disabled selected>Selecciona un Cliente</option>
+                                        <option th:each="cliente : ${clientes}" th:value="${cliente.idCliente}"
+                                                th:text="${cliente.nombre}+' - DNI: '+${cliente.dni}"
+                                                th:selected="${vehiculo.cliente != null and cliente.idCliente == vehiculo.cliente.idCliente}">
+                                        </option>
+                                    </select>
+                                </div>
+        
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoVehiculo" th:field="*{estado}"/>
+                                </div>
+                            </div>
+                            
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card m-r" value="Guardar" />
+                                <a class="btn-eliminar" th:href="@{/vehiculos}">Regresar</a>
+                            </div>
                         </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Patente</label>
-                            <input class="form-control" type="text" name="patenteVehiculo" th:field="*{patente}" />
-                            <span th:if="${#fields.hasErrors('patente')}" th:errors="*{patente}"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Año</label>
-                            <input class="form-control" type="text" name="yearVehiculo" th:field="*{year}" />
-                            <span th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Modelo</label>
-
-                            <select class="form-control" id="modelo" name="modelo" required>
-                                <option value="" disabled selected>Selecciona un Modelo</option>
-                                <option th:each="modelo : ${modelos}" th:value="${modelo.idModelo}" th:text="${modelo.nombre}" th:selected="${vehiculo.modelo != null and modelo.idModelo == vehiculo.modelo.idModelo}"></option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Cliente</label>
-                            <select class="form-control" id="cliente" name="cliente" required>
-                                <option value="" disabled selected>Selecciona un Cliente</option>
-                                <option th:each="cliente : ${clientes}" th:value="${cliente.idCliente}"
-                                        th:text="${cliente.nombre}+' - DNI: '+${cliente.dni}"
-                                        th:selected="${vehiculo.cliente != null and cliente.idCliente == vehiculo.cliente.idCliente}">
-                                </option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="hidden" name="estadoVehiculo" th:field="*{estado}"/>
-                        </div>
-
-                    </div>
-                    <div class="card-footer">
-                    <button type="submit" class="btn btn-success ">Guardar</button>
-                    <a  class="btn btn-danger" th:href="@{/vehiculos}">Regresar</a>
                         
-                    </div>
+                    </form>
                 </div>
-                
-            </form>
-        </div>
+        
+                <!--Actualizar-->
+                <div th:if="${modo eq 'editar'}">
+                    <form th:action="@{/actualizarVehiculo}" th:object="${vehiculo}" method="POST">
+                        <div class="col-100">
+                            <div>
+                                <h2>Editar Vehiculo</h2>
+                            </div>
 
-        <!--Actualizar-->
-        <div th:if="${modo eq 'editar'}">
-            <form th:action="@{/actualizarVehiculo}" th:object="${vehiculo}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Vehiculo</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group">
-                            <input type="hidden" name="idVehiculo" th:field="*{idVehiculo}"/>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Patente</label>
-                            <input class="form-control" type="text" name="patenteVehiculo" th:field="*{patente}" />
-                            <span th:if="${#fields.hasErrors('patente')}" th:errors="*{patente}"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Año</label>
-                            <input class="form-control" type="text" name="yearVehiculo" th:field="*{year}" />
-                            <span th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></span>
+                            <div class="flex flex-column-center">
+                                <div>
+                                    <input class="buscador-card" type="hidden" name="idVehiculo" th:field="*{idVehiculo}"/>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Patente</label>
+                                    <input class="buscador-card" type="text" name="patenteVehiculo" th:field="*{patente}" />
+                                    <span th:if="${#fields.hasErrors('patente')}" th:errors="*{patente}"></span>
+                                </div>
+        
+                                <div class="m-t-small">
+                                    <label>Año</label>
+                                    <input class="buscador-card" type="text" name="yearVehiculo" th:field="*{year}" />
+                                    <span th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></span>
+                                </div>
+                                
+                                <div class="m-t">
+                                    <label>Modelo</label>
+                                    <select id="modelo" name="modelo" required>
+                                        <option value="" disabled selected>Selecciona un Modelo</option>
+                                        <option th:each="modelo : ${modelos}" th:value="${modelo.idModelo}" th:text="${modelo.nombre}" th:selected="${vehiculo.modelo != null and modelo.idModelo == vehiculo.modelo.idModelo}"></option>
+                                    </select>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Cliente</label>
+                                    <select id="cliente" name="cliente" required>
+                                        <option value="" disabled selected>Selecciona un Cliente</option>
+                                        <option th:each="cliente : ${clientes}" th:value="${cliente.idCliente}" th:text="${cliente.nombre}+' - DNI: '+${cliente.dni}" th:selected="${vehiculo.cliente != null and cliente.idCliente == vehiculo.cliente.idCliente}"></option>
+                                    </select>
+                                </div>
+        
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoVehiculo" th:field="*{estado}"/>
+                                </div>
+        
+                            </div>
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card" value="Actualizar" />
+                                <a  class="btn-eliminar m-l" th:href="@{/vehiculos}">Regresar</a>
+                                
+                            </div>
                         </div>
                         
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Modelo</label>
-
-                            <select class="form-control" id="modelo" name="modelo" required>
-                                <option value="" disabled selected>Selecciona un Modelo</option>
-                                <option th:each="modelo : ${modelos}" th:value="${modelo.idModelo}" th:text="${modelo.nombre}" th:selected="${vehiculo.modelo != null and modelo.idModelo == vehiculo.modelo.idModelo}"></option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Cliente</label>
-
-                            <select class="form-control" id="cliente" name="cliente" required>
-                                <option value="" disabled selected>Selecciona un Cliente</option>
-                                <option th:each="cliente : ${clientes}" th:value="${cliente.idCliente}" th:text="${cliente.nombre}+' - DNI: '+${cliente.dni}" th:selected="${vehiculo.cliente != null and cliente.idCliente == vehiculo.cliente.idCliente}"></option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="hidden" name="estadoVehiculo" th:field="*{estado}"/>
-                        </div>
-
-                    </div>
-                    <div class="card-footer">
-                        <button type="submit" class="btn btn-success">Actualizar</button>
-                        <a  class="btn btn-danger" th:href="@{/vehiculos}">Regresar</a>
-                        
-                    </div>
+                    </form>
+        
+        
                 </div>
-                
-            </form>
-
-
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
