--- a/src/main/resources/templates/clientesEliminados.html
+++ b/src/main/resources/templates/clientesEliminados.html
@@ -3,91 +3,95 @@
     <title>Clientes</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" th:href="@{/marcas}">Marcas</a>
-                    <a class="nav-link" th:href="@{/modelos}">Modelos</a>
-                    <a class="nav-link active" aria-current="page" th:href="@{/clientes}">Clientes</a>
-                    <a class="nav-link" th:href="@{/vehiculos}">Vehiculos</a>
-                    <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                    <a class="nav-link" th:href="@{/servicios}">Servicios</a>
-                    <a class="nav-link" th:href="@{/tecnicos}">Tecnicos</a>
-                </div>
+    <header>
+        <nav>
+            <a th:href="@{/}">Inicio</a>
+            <a th:href="@{/marcas}">Marcas</a>
+            <a th:href="@{/modelos}">Modelos</a>
+            <a class="activo" th:href="@{/clientes}">Clientes</a>
+            <a th:href="@{/vehiculos}">Vehiculos</a>
+            <a th:href="@{/ordenes}">Ordenes</a>
+            <a th:href="@{/servicios}">Servicios</a>
+            <a th:href="@{/tecnicos}">Tecnicos</a>
+            <a th:href="@{/estadisticas}">Estadisticas</a>                
+        </nav>
+    </header>
+
+    <div class="hero">
+
+    
+        <div class="fila flex-start">
+            <div class="col-100 m-t">
+                <h2>Listado Clientes eliminados</h2>
             </div>
         </div>
-    </nav>
-</header>
 
-<div class="container mt-4">
-    <h3>Listado clientes eliminados</h3>
-
-        <form class="d-flex" method="get">
-            <div>
-                <a th:href="@{/clientes}" class="btn btn-warning me-5 mt-3">Volver</a>
+        <div class="fila flex-column-center"> 
+            <div class="col-100 caja-barra-busqueda">
+                <form class="flex-center" role="search"  th:object="${cliente}" method="get">
+                    <input class="buscador" type="number" name="dni" placeholder="Ingrese el dni del cliente" aria-label="Search" th:value="${dni}">
+                    <button class="btn-buscar m-l" type="submit">Buscar</button>
+                </form>
+                <div class="flex-center">
+                    <a th:href="@{/clientes}" class="btn-eliminar m-t-small">Volver</a>
+                </div>
+            
             </div>
-        </form>
+        </div>
 
-        <form class="d-flex me-4" role="search"  th:object="${cliente}" method="get">
-            <input class="form-control me-2 mt-3" type="number" name="dni" placeholder="Ingrese el dni del cliente" aria-label="Search" th:value="${dni}">
-
-            <button class="btn btn-success mt-3" type="submit">Buscar</button>
-        </form>
-    <div th:if="${cliente != null and !cliente.empty}">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>DNI</th>
-                <th>Licencia</th>
-                <th>Direccion</th>
-                <th>Email</th>
-                <th>Telefono</th>
-                <th>Acciones</th>
-            </tr>
-            </thead>
-
-            <tr th:each="cliente :${cliente}">
-                <td th:text="${cliente.nombre}">Mostrar Nombre</td>
-                <td th:text="${cliente.apellido}">Mostrar Apellido</td>
-                <td th:text="${cliente.dni}">Mostrar Dni</td>
-                <td>
-                    <span th:if="${cliente.licencia != null and cliente.licencia != ''}" th:text="${cliente.licencia}">Mostrar Licencia</span>
-                    <span th:unless="${cliente.licencia != null and cliente.licencia != ''}">(No Ingresado)</span>
-                </td>
-                <td>
-                    <span th:if="${cliente.direccion != null and cliente.direccion != ''}" th:text="${cliente.direccion}">Mostrar Direccion</span>
-                    <span th:unless="${cliente.direccion != null and cliente.direccion != ''}">(No Ingresado)</span>
-                </td>
-                <td>
-                    <span th:if="${cliente.email != null and cliente.email != ''}" th:text="${cliente.email}">Mostrar Email</span>
-                    <span th:unless="${cliente.email != null and cliente.email != ''}">(No Ingresado)</span>
-                </td>
-                <td>
-                    <span th:if="${cliente.telefono != null and cliente.telefono != ''}" th:text="${cliente.telefono}">Mostrar Telefono</span>
-                    <span th:unless="${cliente.telefono != null and cliente.telefono != ''}">(No Ingresado)</span>
-                </td>
-                <td> <a class="btn btn-warning" th:href="@{/recuperarCliente/} + ${cliente.idCliente}" th:text="Recuperar"/></td>
-            </tr>
-        </table>
+        
+    <div class="fila flex-center" th:if="${cliente != null and !cliente.empty}">
+        <div class="col-100 caja-tablas">
+            <table>
+                <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>DNI</th>
+                    <th>Licencia</th>
+                    <th>Direccion</th>
+                    <th>Email</th>
+                    <th>Telefono</th>
+                    <th>Acciones</th>
+                </tr>
+                </thead>
+    
+                <tr th:each="cliente :${cliente}">
+                    <td th:text="${cliente.nombre}">Mostrar Nombre</td>
+                    <td th:text="${cliente.apellido}">Mostrar Apellido</td>
+                    <td th:text="${cliente.dni}">Mostrar Dni</td>
+                    <td>
+                        <span th:if="${cliente.licencia != null and cliente.licencia != ''}" th:text="${cliente.licencia}">Mostrar Licencia</span>
+                        <span th:unless="${cliente.licencia != null and cliente.licencia != ''}">(No Ingresado)</span>
+                    </td>
+                    <td>
+                        <span th:if="${cliente.direccion != null and cliente.direccion != ''}" th:text="${cliente.direccion}">Mostrar Direccion</span>
+                        <span th:unless="${cliente.direccion != null and cliente.direccion != ''}">(No Ingresado)</span>
+                    </td>
+                    <td>
+                        <span th:if="${cliente.email != null and cliente.email != ''}" th:text="${cliente.email}">Mostrar Email</span>
+                        <span th:unless="${cliente.email != null and cliente.email != ''}">(No Ingresado)</span>
+                    </td>
+                    <td>
+                        <span th:if="${cliente.telefono != null and cliente.telefono != ''}" th:text="${cliente.telefono}">Mostrar Telefono</span>
+                        <span th:unless="${cliente.telefono != null and cliente.telefono != ''}">(No Ingresado)</span>
+                    </td>
+                    <td> <a class="btn-ver-eliminadas" th:href="@{/recuperarCliente/} + ${cliente.idCliente}" th:text="Recuperar"/></td>
+                </tr>
+            </table>
+        </div>
     </div>
 
-    <br>
-
-    <div th:if="${cliente == null or cliente.empty}">
-        La lista de clientes esta vacia
+    <div class="flex-center">
+        <div style="color: white; z-index: 2; font-size: large;" th:if="${cliente == null or cliente.empty}">
+            La lista de clientes esta vacia
+        </div>
     </div>
 </div>
-
+</div>
 </body>
 </html>
