--- a/src/main/resources/templates/marcasEliminadas.html
+++ b/src/main/resources/templates/marcasEliminadas.html
@@ -4,69 +4,72 @@
         <title>Marcas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" th:href="@{/styles.css}"/>
+        
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" th:href="@{/marcas}">Marcas</a>
-                            <a class="nav-link" th:href="@{/modelos}">Modelos</a>
-                            <a class="nav-link" th:href="@{/clientes}">Clientes</a>
-                            <a class="nav-link" th:href="@{/vehiculos}">Vehiculos</a>
-                            <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                            <a class="nav-link" th:href="@{/servicios}">Servicios</a>
-                            <a class="nav-link" th:href="@{/tecnicos}">Tecnicos</a>
-                        </div>
-                    </div>
-                </div>
+            <nav>
+                <a th:href="@{/}">Inicio</a>
+                <a class="activo" th:href="@{/marcas}">Marcas</a>
+                <a th:href="@{/modelos}">Modelos</a>
+                <a th:href="@{/clientes}">Clientes</a>
+                <a th:href="@{/vehiculos}">Vehiculos</a>
+                <a th:href="@{/ordenes}">Ordenes</a>
+                <a th:href="@{/servicios}">Servicios</a>
+                <a th:href="@{/tecnicos}">Tecnicos</a>
+                <a th:href="@{/estadisticas}">Estadisticas</a>                
             </nav>
         </header>
+        
+        <div class="hero">
+            
+            <div class="fila flex-start">
+                <div class="col-100 m-t">
+                    <h2>Listado marcas eliminadas</h2>
+                </div>
+            </div>
+                
+            <div class="fila flex-column-center"> 
+                <div class="col-100 caja-barra-busqueda">
+                    <form class="flex-center" role="search" th:object="${marca}" method="get">
+                        <input class="buscador" type="search" name="nombre" placeholder="Ingrese el nombre de la marca que desea buscar"
+                            aria-label="Search" th:value="${nombre}">
+                            
+                        <input type="submit" class="btn-buscar m-l" value="Buscar">
+                    </form>
 
-        <div class="container mt-4">
-            <h3>Listado marcas eliminadas</h3>
-            <div>
-                <form class="d-flex" method="get">
-                    <div>
-                        <a th:href="@{/marcas}" class="btn btn-danger me-5 mt-3">Volver</a>
+                    <div class="flex-center">
+                        <a th:href="@{/marcas}" class="btn-eliminar m-t-small">Volver</a>
                     </div>
-                </form>
-
-                <form class="d-flex me-4" role="search" th:object="${marca}" method="get">
-                    <input class="form-control me-2 mt-3" type="search" name="nombre" placeholder="Ingrese el nombre de la marca que desea buscar"
-                        aria-label="Search" th:value="${nombre}">
-                        
-                    <input type="submit" class="btn btn-success me-2 mt-3" value="Buscar">
-                </form>
+                </div>
             </div>
             
-            <br>
-            <div th:if="${marca != null and !marca.empty}">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Acciones</th>
+            
+            <div class="fila flex-center" th:if="${marca != null and !marca.empty}">
+                <div class="col-100 caja-tablas">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        
+                        <tr th:each="marca :${marca}">
+                            <td th:text="${marca.nombre}">Mostrar Nombre</td>
+                            <td> <a class="btn-ver-eliminadas" th:href="@{/recuperarMarca/} + ${marca.idMarca}" th:text="Recuperar"/></td>
                         </tr>
-                    </thead>
-
-                    <tr th:each="marca :${marca}">
-                        <td th:text="${marca.nombre}">Mostrar Nombre</td>
-                        <td> <a class="btn btn-warning" th:href="@{/recuperarMarca/} + ${marca.idMarca}" th:text="Recuperar"/></td>
-                    </tr>
-                </table>
+                    </table>
+                </div>
             </div>
-            <br/>
-            <div th:if="${marca == null or marca.empty}">
-                La lista de marcas esta vacia
+            
+            <div class="flex-center">
+                <div style="color: white; z-index: 2; font-size: large;"  th:if="${marca == null or marca.empty}">
+                    La lista de marcas esta vacía
+                </div>
             </div>
-        </div>
     
+        </div>
     </body>
 </html>
