--- a/src/main/resources/templates/modelos.html
+++ b/src/main/resources/templates/modelos.html
@@ -4,75 +4,84 @@
         <title>Modelos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" th:href="@{/styles.css}"/>
     </head>
     <body>
+
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link " th:href="@{/marcas}">Marcas</a>
-                            <a class="nav-link active" aria-current="page" th:href="@{/modelos}">Modelos</a>
-                            <a class="nav-link" th:href="@{/clientes}">Clientes</a>
-                            <a class="nav-link " th:href="@{/vehiculos}">Vehiculos</a>
-                            <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                            <a class="nav-link" th:href="@{/servicios}">Servicios</a>
-                            <a class="nav-link" th:href="@{/tecnicos}">Tecnicos</a>
-                            <a class="nav-link" th:href="@{/estadisticas}">Estadisticas</a>
-                        </div>
-                    </div>
-                </div>
+            <nav>
+                <a th:href="@{/}">Inicio</a>
+                <a th:href="@{/marcas}">Marcas</a>
+                <a class="activo" th:href="@{/modelos}">Modelos</a>
+                <a th:href="@{/clientes}">Clientes</a>
+                <a th:href="@{/vehiculos}">Vehiculos</a>
+                <a th:href="@{/ordenes}">Ordenes</a>
+                <a th:href="@{/servicios}">Servicios</a>
+                <a th:href="@{/tecnicos}">Tecnicos</a>
+                <a th:href="@{/estadisticas}">Estadisticas</a>                
             </nav>
         </header>
 
-        <div class="container mt-4">
-            <h3>Listado Modelos</h3>
-            <div>
-                <form class="d-flex me-4" method="get">
-                    <div>
-                        <a th:href="@{/agregarModelo}" class="btn btn-primary me-5 mt-3">Agregar</a>
-                    </div>
-                    <input class="form-control me-2 mt-3" type="search" name="nombre" placeholder="Ingrese el nombre del modelo que desea buscar"
-                        aria-label="Search" th:value="${nombre}">
 
-                    <select class="form-select me-2 mt-3" name="marca" aria-label="Default select example">
-                        <option selected value="-1">Seleccione una marca</option>
-                        <option th:each="marca : ${marca}" th:value="${marca.idMarca}" th:text="${marca.nombre}"
-                            th:selected="${marca.idMarca == idMarca}"></option>
-                    </select>
+    <div class="hero">
 
-                    <input type="submit" class="btn btn-success me-2 mt-3" value="Buscar">
-                </form>
+            <div class="fila flex-column-center">
+                <div class="col-100">
+                    <h2>Listado Modelos</h2>          
+                </div> 
+                <div class="fila flex-center">
+                    <a th:href="@{/agregarModelo}" class="btn-agregar">Agregar</a>
+                </div>
+            </div> 
+
+            <div class="fila flex-column-center">
+                <div class="col-100 caja-barra-busqueda">
+                    <label>Buscador de Modelos</label>
+                    <form class="flex-center m-t-small" method="get">
+                        
+                        <input class="buscador" type="search" name="nombre" placeholder="Ingrese el nombre del modelo que desea buscar"
+                            aria-label="Search" th:value="${nombre}">
+    
+                        <select class="m-l" name="marca" aria-label="Default select example">
+                            <option selected value="-1">Seleccione una marca</option>
+                            <option th:each="marca : ${marca}" th:value="${marca.idMarca}" th:text="${marca.nombre}"
+                                th:selected="${marca.idMarca == idMarca}"></option>
+                        </select>
+    
+                        <input type="submit" class="btn-buscar m-l" value="Buscar">
+                    </form>
+                </div>
             </div>
             
-            <br>
-            <div th:if="${modelo != null and !modelo.empty}">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Marca</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-
-                    <tr th:each="modelo :${modelo}">
-                        <td th:text="${modelo.nombre}">Mostrar Nombre</td>
-                        <td th:text="${modelo.marca.nombre}">Mostrar Nombre</td>
-                        <td> <a class="btn btn-warning" th:href="@{/modificarModelo/} + ${modelo.idModelo}" th:text="Editar"/>
-                            <a class="btn btn-danger" th:href="@{/eliminarModelo/} + ${modelo.idModelo}" th:text="Eliminar"/></td>
-                    </tr>
-                </table>
+            
+            <div class="fila flex-center" th:if="${modelo != null and !modelo.empty}">
+               <div class="col-100 caja-tablas">
+                   <table>
+                       <thead>
+                           <tr>
+                               <th>Nombre</th>
+                               <th>Marca</th>
+                               <th>Acciones</th>
+                           </tr>
+                       </thead>
+   
+                       <tr th:each="modelo :${modelo}">
+                           <td th:text="${modelo.nombre}">Mostrar Nombre</td>
+                           <td th:text="${modelo.marca.nombre}">Mostrar Nombre</td>
+                           <td> <a class="btn-editar" th:href="@{/modificarModelo/} + ${modelo.idModelo}" th:text="Editar"/>
+                               <a class="btn-eliminar" th:href="@{/eliminarModelo/} + ${modelo.idModelo}" th:text="Eliminar"/></td>
+                       </tr>
+                   </table>
+               </div>
             </div>
-            <br/>
-            <div th:if="${modelo == null or modelo.empty}">
-                La lista de modelos esta vacia
+            
+            <div class="flex-center">
+                <div style="color: white; z-index: 2; font-size: large;" th:if="${modelo == null or modelo.empty}">
+                    La lista de modelos esta vacia
+                </div>
             </div>
+            
         </div>
+    </div>
     </body>
 </html>
