--- a/src/main/resources/templates/modificarKilometrosPorTecnico.html
+++ b/src/main/resources/templates/modificarKilometrosPorTecnico.html
@@ -3,46 +3,51 @@
 <head>
     <title>Vehiculo</title>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
-<div class="container mt-4">
-    <div class="col-sm-6">
-        <!--Actualizar-->
-        <div th:if="${modo eq 'editar'}">
-            <form th:action="@{/tecnico/actualizarKilometrosPorTecnico/}+ ${ordenDb.idOrden}" th:object="${orden}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Orden</h3>
-                    </div>
 
-                    <div class="card-body">
-                        <div class="form-group">
-                            <input type="hidden" name="idOrden" th:field="*{idOrden}"/>
+    <div class="hero">
+
+        <div class="fila flex-center">
+            <div class="caja-barra-busqueda-card">
+                <!--Actualizar-->
+                <div th:if="${modo eq 'editar'}">
+                    <form th:action="@{/tecnico/actualizarKilometrosPorTecnico/}+ ${ordenDb.idOrden}" th:object="${orden}" method="POST">
+                        <div class="col-100">
+                            <div>
+                                <h2>Modificar Kilometros</h>
+                            </div>
+        
+                            <div class="flex-column-center">
+                                <div class="form-group">
+                                    <input type="hidden" name="idOrden" th:field="*{idOrden}"/>
+                                </div>
+        
+                                <div class="m-t">
+                                    <label>Kilometros</label>
+                                    <input class="buscador-card m-t-small" type="text" name="kilometrosVehiculo" placeholder="Ingrese el kilometraje del vehiculo" th:field="*{kilometros}" />
+                                    <span th:if="${#fields.hasErrors('kilometros')}" th:errors="*{kilometros}"></span>
+                                </div>
+        
+                                <div class="form-group">
+                                    <input type="hidden" name="estadoOrden" th:field="*{estado}"/>
+                                </div>
+        
+                            </div>
+        
+                            <div class="flex-center m-t">
+                                <input type="submit" class="btn-editar-card m-r" value="Actualizar" />
+                                <a  class="btn-eliminar" th:href="@{/tecnico/vehiculos/} + ${ordenDb.tecnico.idTecnico}">Regresar</a>
+                                
+                            </div>
                         </div>
-
-                        <div class="form-group">
-                            <label style="font-weight: bold;">Kilometros</label>
-                            <input class="form-control" type="text" name="kilometrosVehiculo" placeholder="Ingrese el kilometraje del vehiculo" th:field="*{kilometros}" />
-                            <span th:if="${#fields.hasErrors('kilometros')}" th:errors="*{kilometros}"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="hidden" name="estadoOrden" th:field="*{estado}"/>
-                        </div>
-
-                    </div>
-
-                    <div class="card-footer">
-                        <button type="submit" class="btn btn-success">Actualizar</button>
-                        <a  class="btn btn-danger" th:href="@{/tecnico/vehiculos/} + ${ordenDb.tecnico.idTecnico}">Regresar</a>
                         
-                    </div>
+                    </form>
                 </div>
-                
-            </form>
+            </div>
         </div>
+
     </div>
-</div>
 </body>
 </html>
