--- a/src/main/resources/templates/servicios.html
+++ b/src/main/resources/templates/servicios.html
@@ -4,79 +4,86 @@
         <title>Servicios</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" th:href="@{/styles.css}"/>
     </head>
     <body>
+    
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link" th:href="@{/marcas}">Marcas</a>
-                            <a class="nav-link" th:href="@{/modelos}">Modelos</a>
-                            <a class="nav-link" th:href="@{/clientes}">Clientes</a>
-                            <a class="nav-link" th:href="@{/vehiculos}">Vehiculos</a>
-                            <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                            <a class="nav-link active" aria-current="page" th:href="@{/servicios}">Servicios</a>
-                            <a class="nav-link" th:href="@{/tecnicos}">Tecnicos</a>
-                            <a class="nav-link" th:href="@{/estadisticas}">Estadisticas</a>
-                        </div>
-                    </div>
-                </div>
+            <nav>
+                <a th:href="@{/}">Inicio</a>
+                <a th:href="@{/marcas}">Marcas</a>
+                <a th:href="@{/modelos}">Modelos</a>
+                <a th:href="@{/clientes}">Clientes</a>
+                <a th:href="@{/vehiculos}">Vehiculos</a>
+                <a th:href="@{/ordenes}">Ordenes</a>
+                <a class="activo" th:href="@{/servicios}">Servicios</a>
+                <a th:href="@{/tecnicos}">Tecnicos</a>
+                <a th:href="@{/estadisticas}">Estadisticas</a>                
             </nav>
         </header>
 
-        <div class="container mt-4">
-            <h3>Listado Servicios</h3>
-            <form class="d-flex" method="get">
-                <div>
-                    <a th:href="@{/agregarServicio}" class="btn btn-primary me-5 mt-3">Agregar</a>
-                    <a th:href="@{/serviciosEliminados}" class="btn btn-warning me-5 mt-3">Ver eliminados</a>
-                </div>
-            </form>
-            <div>
-                <form class="d-flex me-4" method="get">
-  
-                    <input class="form-control me-2 mt-3" type="search" name="nombre" placeholder="Ingrese el nombre del servicio que desea buscar"
+        <div class="hero">
+
+            <div class="fila flex-start">
+                <div class="col-100 m-t">
+                    <h2>Listado Servicios</h2>          
+                </div> 
+            </div>   
+                
+            <div class="fila flex-center">
+                <a th:href="@{/agregarServicio}" class="btn-agregar">Agregar</a>
+                <a th:href="@{/serviciosEliminados}" class="btn-ver-eliminadas m-l">Ver eliminados</a>
+            </div>
+            
+            
+            <div class="fila flex-column-center">
+                <div class="col-100 caja-barra-busqueda">
+                    <label>Buscador de Servicios</label>
+                    <form class="flex-center m-t-small" method="get">
+                        <input class="buscador" type="search" name="nombre" placeholder="Ingrese el nombre del servicio"
                         aria-label="Search" th:value="${nombre}">
-                        
-                    <input type="submit" class="btn btn-success me-2 mt-3" value="Buscar">
-                </form>
+                        <input type="submit" class="btn-buscar m-l" value="Buscar">
+                    </form>
+                </div>     
             </div>
-
-            <br>
-            <div th:if="${servicio != null and !servicio.empty}">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Precio</th>
-                            <th>Repuesto</th>
-                            <th>Acciones</th>
-
+                    
+            
+            <div class="fila flex-center" th:if="${servicio != null and !servicio.empty}">
+                <div class="col-100 caja-tablas">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Repuesto</th>
+                                <th>Acciones</th>
+    
+                            </tr>
+                        </thead>
+    
+                        <tr th:each="servicio :${servicio}">
+                            <td th:text="${servicio.nombre}">Mostrar Nombre</td>
+                            <td th:text="${servicio.precioFormateado()}">Mostrar Precio</td>
+                            <td>
+                                <span th:if="${servicio.repuesto != null and servicio.repuesto != ''}" th:text="${servicio.repuesto}">Mostrar Repuesto</span>
+                                <span th:unless="${servicio.repuesto != null and servicio.repuesto != ''}">(No Ingresado)</span>
+                            </td>
+                            <td> <a class="btn-editar" th:href="@{/modificarServicio/} + ${servicio.idServicio}" th:text="Editar"/>
+                                <a class="btn-eliminar" th:href="@{/eliminarServicio/} + ${servicio.idServicio}" th:text="Eliminar"/></td>
                         </tr>
-                    </thead>
+                    </table>
 
-                    <tr th:each="servicio :${servicio}">
-                        <td th:text="${servicio.nombre}">Mostrar Nombre</td>
-                        <td th:text="${servicio.precioFormateado()}">Mostrar Precio</td>
-                        <td>
-                            <span th:if="${servicio.repuesto != null and servicio.repuesto != ''}" th:text="${servicio.repuesto}">Mostrar Repuesto</span>
-                            <span th:unless="${servicio.repuesto != null and servicio.repuesto != ''}">(No Ingresado)</span>
-                        </td>
-                        <td> <a class="btn btn-warning" th:href="@{/modificarServicio/} + ${servicio.idServicio}" th:text="Editar"/>
-                            <a class="btn btn-danger" th:href="@{/eliminarServicio/} + ${servicio.idServicio}" th:text="Eliminar"/></td>
-                    </tr>
-                </table>
+                </div>
             </div>
-            <br/>
-            <div th:if="${servicio == null or servicio.empty}">
-                La lista de servicios esta vacia
+                
+            
+            <div class="flex-center">
+                <div style="color: white; z-index: 2; font-size: large;" th:if="${servicio == null or servicio.empty}">
+                    La lista de servicios esta vacia
+                </div>
             </div>
+                
+                
         </div>
     </body>
 </html>
