--- a/src/main/resources/templates/vehiculoPorTecnico.html
+++ b/src/main/resources/templates/vehiculoPorTecnico.html
@@ -3,72 +3,78 @@
     <title>Vehiculos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link " th:href="@{/marcas}">Marcas</a>
-                    <a class="nav-link " th:href="@{/modelos}">Modelos</a>
-                    <a class="nav-link" th:href="@{/clientes}">Clientes</a>
-                    <a class="nav-link"  th:href="@{/vehiculos}">Vehiculos</a>
-                    <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                    <a class="nav-link" th:href="@{/servicios}">Servicios</a>
-                    <a class="nav-link active" aria-current="page" th:href="@{/tecnicos}">Tecnicos</a>
-                </div>
+    <header>
+        <nav>
+            <a th:href="@{/}">Inicio</a>
+            <a th:href="@{/marcas}">Marcas</a>
+            <a th:href="@{/modelos}">Modelos</a>
+            <a th:href="@{/clientes}">Clientes</a>
+            <a th:href="@{/vehiculos}">Vehiculos</a>
+            <a th:href="@{/ordenes}">Ordenes</a>
+            <a th:href="@{/servicios}">Servicios</a>
+            <a class="activo" th:href="@{/tecnicos}">Tecnicos</a>
+            <a th:href="@{/estadisticas}">Estadisticas</a>                
+        </nav>
+    </header>
+
+    <div class="hero">
+
+        <div class="fila flex-start">
+            <div class="col-100 m-t">
+                <h2>Lista de Vehiculos asignados</h2>
             </div>
         </div>
-    </nav>
-</header>
 
-<div class="container mt-4">
-    <h3>Listado de Vehiculos Asignados</h3>
-    <br>
-    <div th:if="${vehiculos != null and !vehiculos.empty}">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Patente</th>
-                <th>Año</th>
-                <th>Modelo</th>
-                <th>Marca</th>
-                <th>Kilometros</th>
-                <th>Orden</th>
-                <th>Acciones</th>
-            </tr>
-            </thead>
 
-            <tr th:each="orden : ${ordenes}">
-                <td th:text="${orden.vehiculo.patente}">Mostrar Patente</td>
-                <td th:text="${orden.vehiculo.year}">Mostrar Year</td>
-                <td th:text="${orden.vehiculo.modelo.nombre}">Mostrar Modelo</td>
-                <td th:text="${orden.vehiculo.modelo.marca.nombre}">Mostrar Marca</td>
-                <td th:text="${orden.kilometros}">Mostrar kilometros</td>
-                <td th:text="${orden.idOrden}">Orden ID</td>
-                <td> 
-                    <a class="btn btn-warning" th:href="@{/tecnico/modificarKilometrosPorTecnico/} + ${orden.vehiculo.idVehiculo} + '/' + ${orden.tecnico.idTecnico} + '/'+ ${orden.idOrden}" th:text="Editar"/>
-                </td>
-            </tr>
-        </table>
+            <div class="fila flex-center" th:if="${vehiculos != null and !vehiculos.empty}">
+                <div class="col-100 caja-tablas">
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Patente</th>
+                            <th>Año</th>
+                            <th>Modelo</th>
+                            <th>Marca</th>
+                            <th>Kilometros</th>
+                            <th>Orden</th>
+                            <th>Acciones</th>
+                        </tr>
+                        </thead>
+            
+                        <tr th:each="orden : ${ordenes}">
+                            <td th:text="${orden.vehiculo.patente}">Mostrar Patente</td>
+                            <td th:text="${orden.vehiculo.year}">Mostrar Year</td>
+                            <td th:text="${orden.vehiculo.modelo.nombre}">Mostrar Modelo</td>
+                            <td th:text="${orden.vehiculo.modelo.marca.nombre}">Mostrar Marca</td>
+                            <td th:text="${orden.kilometros}">Mostrar kilometros</td>
+                            <td th:text="${orden.idOrden}">Orden ID</td>
+                            <td> 
+                                <a class="btn-editar" th:href="@{/tecnico/modificarKilometrosPorTecnico/} + ${orden.vehiculo.idVehiculo} + '/' + ${orden.tecnico.idTecnico} + '/'+ ${orden.idOrden}" th:text="Editar"/>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        
+            
+            <div class="flex-center">
+                <div style="color: white; z-index: 2; font-size: large;" th:if="${vehiculos == null or vehiculos.empty}">
+                    La lista de vehiculos esta vacia
+                </div>
+            </div>
+           
+
+            <div class="flex-center">
+                <a style="z-index: 2;" class="btn-eliminar" th:href="@{/tecnicos}">Regresar</a>
+            </div>
+        
+        </div>
+
     </div>
 
-    <br/>
-
-    <div th:if="${vehiculos == null or vehiculos.empty}">
-        La lista de vehiculos esta vacia
-    </div>
-    <br>
-    <div class="card-footer">
-        <a  class="btn btn-secondary" th:href="@{/tecnicos}">Regresar</a>
-    </div>
-</div>
 
 </body>
 </html>
