--- a/src/main/resources/templates/vehiculos.html
+++ b/src/main/resources/templates/vehiculos.html
@@ -3,95 +3,98 @@
     <title>Vehiculos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>    
 </head>
 <body>
+
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" th:href="@{/marcas}">Marcas</a>
-                        <a class="nav-link" th:href="@{/modelos}">Modelos</a>
-                        <a class="nav-link" th:href="@{/clientes}">Clientes</a>
-                        <a class="nav-link active" aria-current="page" th:href="@{/vehiculos}">Vehiculos</a>
-                        <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                        <a class="nav-link" th:href="@{/servicios}">Servicios</a>
-                        <a class="nav-link" th:href="@{/tecnicos}">Tecnicos</a>
-                        <a class="nav-link" th:href="@{/estadisticas}">Estadisticas</a>
-                    </div>
-                </div>
-            </div>
+        <nav>
+            <a th:href="@{/}">Inicio</a>
+            <a  th:href="@{/marcas}">Marcas</a>
+            <a th:href="@{/modelos}">Modelos</a>
+            <a th:href="@{/clientes}">Clientes</a>
+            <a class="activo" th:href="@{/vehiculos}">Vehiculos</a>
+            <a th:href="@{/ordenes}">Ordenes</a>
+            <a th:href="@{/servicios}">Servicios</a>
+            <a th:href="@{/tecnicos}">Tecnicos</a>
+            <a th:href="@{/estadisticas}">Estadisticas</a>                
         </nav>
     </header>
-    <div class="container mt-4">
-        <h3>Listado Vehiculos</h3>
-        <form class="d-flex" method="get">
-            <div>
-                <a th:href="@{/agregarVehiculo}" class="btn btn-primary me-5 mt-3">Agregar</a>
-                <a th:href="@{/vehiculosEliminados}" class="btn btn-warning me-5 mt-3">Ver eliminados</a>
+
+    <div class="hero">
+
+        <div class="fila flex-start">
+            <div class="col-100 m-t">
+                <h2>Listado Vehiculos</h2>          
+            </div> 
+        </div>   
+
+        <div class="fila flex-center">
+            <a th:href="@{/agregarVehiculo}" class="btn-agregar">Agregar</a>
+            <a th:href="@{/vehiculosEliminados}" class="btn-ver-eliminadas m-l">Ver eliminados</a>
+        </div>
+
+        <div class="fila flex-column-center">    
+            <div class="col-100 caja-barra-busqueda">
+                <label>Buscador de Vehiculos</label>
+                <form class="flex-center m-t-small" method="get">
+                    <input class="buscador" type="search" name="patente" placeholder="Ingrese una patente"
+                        aria-label="Search" th:value="${patente}">
+    
+                    <select class="m-l-small" name="marca" aria-label="Default select example">
+                        <option selected value="-1">Seleccione una marca</option>
+                        <option th:each="marca : ${marcas}" th:value="${marca.idMarca}" th:text="${marca.nombre}"
+                            th:selected="${marca.idMarca == idMarca}"></option>
+                    </select>
+    
+                    <select name="modelo" aria-label="Default select example">
+                        <option selected value="-1">Seleccione un modelo</option>
+                        <option th:each="modelo : ${modelos}" th:value="${modelo.idModelo}" th:text="${modelo.nombre}"
+                            th:selected="${modelo.idModelo == idModelo}"></option>
+                    </select>
+                    <input type="submit" class="btn-buscar m-l" value="Buscar">
+                </form>
             </div>
-        </form>
-        <div>
-            <form class="d-flex" method="get">
-                <input class="form-control me-2 mt-3" type="search" name="patente" placeholder="Ingrese una patente"
-                    aria-label="Search" th:value="${patente}">
-
-                <select class="form-select me-2 mt-3" name="marca" aria-label="Default select example">
-                    <option selected value="-1">Seleccione una marca</option>
-                    <option th:each="marca : ${marcas}" th:value="${marca.idMarca}" th:text="${marca.nombre}"
-                        th:selected="${marca.idMarca == idMarca}"></option>
-                </select>
-
-                <select class="form-select me-2 mt-3" name="modelo" aria-label="Default select example">
-                    <option selected value="-1">Seleccione un modelo</option>
-                    <option th:each="modelo : ${modelos}" th:value="${modelo.idModelo}" th:text="${modelo.nombre}"
-                        th:selected="${modelo.idModelo == idModelo}"></option>
-                </select>
-                <input type="submit" class="btn btn-success me-2 mt-3" value="Buscar">
-            </form>
-            
         </div>
 
         
-        <br>
-        <div th:if="${vehiculo != null and !vehiculo.empty}">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Patente</th>
-                        <th>Año</th>
-                        <th>Modelo</th>
-                        <th>Marca</th>
-                        <th>Cliente</th>
-                        <th>Acciones</th>
+        <div class="fila flex-center" th:if="${vehiculo != null and !vehiculo.empty}">
+            <div class="col-100 caja-tablas">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Patente</th>
+                            <th>Año</th>
+                            <th>Modelo</th>
+                            <th>Marca</th>
+                            <th>Cliente</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+    
+                    <tr th:each="vehiculo :${vehiculo}">
+                        <td th:text="${vehiculo.patente}">Mostrar Patente</td>
+                        <td th:text="${vehiculo.year}">Mostrar Year</td>
+                        <td th:text="${vehiculo.modelo.nombre}">Mostrar Modelo</td>
+                        <td th:text="${vehiculo.modelo.marca.nombre}">Mostrar Marca</td>
+                        <td th:text="${vehiculo.cliente.nombre}">Mostrar Nombre Cliente</td>
+                        <td> <a class="btn-editar-card" th:href="@{/modificarVehiculo/} + ${vehiculo.idVehiculo}"
+                                th:text="Editar" />
+                            <a class="btn-eliminar" th:href="@{/eliminarVehiculo/} + ${vehiculo.idVehiculo}"
+                                th:text="Eliminar" />
+                        </td>
                     </tr>
-                </thead>
-
-                <tr th:each="vehiculo :${vehiculo}">
-                    <td th:text="${vehiculo.patente}">Mostrar Patente</td>
-                    <td th:text="${vehiculo.year}">Mostrar Year</td>
-                    <td th:text="${vehiculo.modelo.nombre}">Mostrar Modelo</td>
-                    <td th:text="${vehiculo.modelo.marca.nombre}">Mostrar Marca</td>
-                    <td th:text="${vehiculo.cliente.nombre}">Mostrar Nombre Cliente</td>
-                    <td> <a class="btn btn-warning" th:href="@{/modificarVehiculo/} + ${vehiculo.idVehiculo}"
-                            th:text="Editar" />
-                        <a class="btn btn-danger" th:href="@{/eliminarVehiculo/} + ${vehiculo.idVehiculo}"
-                            th:text="Eliminar" />
-                    </td>
-                </tr>
-            </table>
+                </table>
+            </div>
         </div>
-        <br />
-        <div th:if="${vehiculo == null or vehiculo.empty}">
-            La lista de vehiculos esta vacia
+        
+
+        <div class="flex-center">
+            <div style="color: white; z-index: 2; font-size: large;" th:if="${vehiculo == null or vehiculo.empty}">
+                La lista de vehiculos esta vacia
+            </div>
         </div>
     </div>
+</div>
 </body>
 </html>
