--- a/src/main/resources/templates/vehiculosEliminados.html
+++ b/src/main/resources/templates/vehiculosEliminados.html
@@ -3,85 +3,89 @@
     <title>Vehiculos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" th:href="@{/}">TALLER MECANICO</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" th:href="@{/marcas}">Marcas</a>
-                        <a class="nav-link" th:href="@{/modelos}">Modelos</a>
-                        <a class="nav-link" th:href="@{/clientes}">Clientes</a>
-                        <a class="nav-link active" aria-current="page" th:href="@{/vehiculos}">Vehiculos</a>
-                        <a class="nav-link" th:href="@{/ordenes}">Ordenes</a>
-                        <a class="nav-link" th:href="@{/servicios}">Servicios</a>
-                        <a class="nav-link" th:href="@{/tecnicos}">Tecnicos</a>
-                    </div>
-                </div>
-            </div>
+        <nav>
+            <a th:href="@{/}">Inicio</a>
+            <a th:href="@{/marcas}">Marcas</a>
+            <a th:href="@{/modelos}">Modelos</a>
+            <a th:href="@{/clientes}">Clientes</a>
+            <a class="activo" th:href="@{/vehiculos}">Vehiculos</a>
+            <a th:href="@{/ordenes}">Ordenes</a>
+            <a th:href="@{/servicios}">Servicios</a>
+            <a th:href="@{/tecnicos}">Tecnicos</a>
+            <a th:href="@{/estadisticas}">Estadisticas</a>                
         </nav>
     </header>
-    <div class="container mt-4">
-        <h3>Listado Vehiculos</h3>
-        <form class="d-flex" method="get">
-            <div>
-                <a th:href="@{/vehiculos}" class="btn btn-danger me-5 mt-3">Volver</a>
+
+    <div class="hero">
+
+        <div class="fila flex-start">
+            <div class="col-100 m-t">
+                <h2>Listado Vehiculos eliminados</h2>
             </div>
-        </form>
-        <div>
-            <form class="d-flex" method="get">
-                <input class="form-control me-2 mt-3" type="search" name="patente" placeholder="Ingrese una patente"
-                    aria-label="Search" th:value="${patente}">
-
-                <input type="submit" class="btn btn-success me-2 mt-3" value="Buscar">
-            </form>
-            
         </div>
-
         
-        <br>
-        <div th:if="${vehiculo != null and !vehiculo.empty}">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Patente</th>
-                        <th>Año</th>
-                        <th>Modelo</th>
-                        <th>Marca</th>
-                        <th>Cliente</th>
-                        <th>Acciones</th>
+
+        <div class="fila flex-column-center">
+            <div class="col-100 caja-barra-busqueda">
+                <form class="flex-center" method="get">
+                    <input class="buscador" type="search" name="patente" placeholder="Ingrese una patente"
+                        aria-label="Search" th:value="${patente}">
+            
+                    <input type="submit" class="btn-buscar m-l" value="Buscar">
+                </form>
+    
+                <div class="flex-center">
+                    <a th:href="@{/vehiculos}" class="btn-eliminar m-t-small">Volver</a>
+                </div>
+            </div>
+        </div>
+            
+        
+        <div class="fila flex-center" th:if="${vehiculo != null and !vehiculo.empty}">
+            <div class="col-100 caja-tablas">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Patente</th>
+                            <th>Año</th>
+                            <th>Modelo</th>
+                            <th>Marca</th>
+                            <th>Cliente</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+    
+                    <tr th:each="vehiculo :${vehiculo}">
+                        <td th:text="${vehiculo.patente}">Mostrar Patente</td>
+                        <td th:text="${vehiculo.year}">Mostrar Year</td>
+                        <td th:text="${vehiculo.modelo.nombre}">Mostrar Modelo</td>
+                        <td th:text="${vehiculo.modelo.marca.nombre}">Mostrar Marca</td>
+                        <td th:text="${vehiculo.cliente.nombre}">Mostrar Nombre Cliente</td>
+                        <td> <a class="btn-ver-eliminadas" th:href="@{/recuperarVehiculo/} + ${vehiculo.idVehiculo}"
+                                th:text="Recuperar" />
+                        </td>
                     </tr>
-                </thead>
+                </table>
+            </div>
 
-                <tr th:each="vehiculo :${vehiculo}">
-                    <td th:text="${vehiculo.patente}">Mostrar Patente</td>
-                    <td th:text="${vehiculo.year}">Mostrar Year</td>
-                    <td th:text="${vehiculo.modelo.nombre}">Mostrar Modelo</td>
-                    <td th:text="${vehiculo.modelo.marca.nombre}">Mostrar Marca</td>
-                    <td th:text="${vehiculo.cliente.nombre}">Mostrar Nombre Cliente</td>
-                    <td> <a class="btn btn-warning" th:href="@{/recuperarVehiculo/} + ${vehiculo.idVehiculo}"
-                            th:text="recuperar" />
-                    </td>
-                </tr>
-            </table>
         </div>
-        <br />
-        <div th:if="${vehiculo == null or vehiculo.empty}">
-            La lista de vehiculos esta vacia
+   
+        <div class="flex-center">
+            <div style="color: white; z-index: 2; font-size: large;" th:if="${vehiculo == null or vehiculo.empty}">
+                La lista de vehiculos esta vacia
+            </div>
         </div>
-
+    
         <div th:if="${error != null}" class="alert alert-danger" role="alert">
             <p th:text="${error}"></p>
-        </div>
-        
+        </div>     
+   
+   
     </div>
 </body>
 </html>
+    
