Correccion de errores

--- a/src/main/resources/templates/ordenesEliminadas.html
+++ b/src/main/resources/templates/ordenesEliminadas.html
@@ -27,7 +27,7 @@
        
         <div class="fila flex-start">     
             <div class="col-100 m-t">
-                <h2>Listado marcas eliminadas</h2>
+                <h2>Listado ordenes eliminadas</h2>
             </div>
         </div>
         
