--- a/src/main/resources/templates/serviciosEliminados.html
+++ b/src/main/resources/templates/serviciosEliminados.html
@@ -28,7 +28,7 @@
 
             <div class="fila flex-start">
                 <div class="col-100 m-t">
-                    <h2>Listado marcas eliminadas</h2>
+                    <h2>Listado servicios eliminados</h2>
                 </div>
             </div>
 
